# DSAPROJECT

./: .gitignore  CMakeLists.txt
include/: ForwardIndex.hpp  InvertedIndex.hpp  LexiconBuilder.hpp  TextPreProcessor.hpp  WordDetails.hpp  example.hpp  metadataparser.hpp
sampleOutput/: inverted_index.csv
src/: ForwardIndex.cpp  InvertedIndex.cpp  LexiconBuilder.cpp  TextPreprocessor.cpp  fuckya.cpp  main.cpp  metadataparser.cpp
